--- a/docs/changelog/0.4.1.md
+++ b/docs/changelog/0.4.1.md
@@ -69,7 +69,7 @@ This feature is crucial for cross compilation on different platforms - if we eli
 branch containing call to OS specific function it would be never used, and though we would 
 not need its definition when building.
 
-In the snippet bellow you can see an example of linktime conditional branching. Depending on
+In the snippet below you can see an example of linktime conditional branching. Depending on
 Native Config settings only one of the if condition branch would be taken, the second one
 would be always discarded. 
 
