--- a/docs/changelog/0.4.2.md
+++ b/docs/changelog/0.4.2.md
@@ -2,7 +2,7 @@
 # 0.4.2 (2021-12-06)
 
 We're happy to announce the patch release of Scala Native 0.4.2, which brings 
-improvements to Java HashMaps implementation and faster Zone allocations
+improvements to Java HashMaps implementation and faster Zone allocations.
 
 <table>
 <tbody>
