Replace all remaining usages of no-parens (stack)alloc[T]

--- a/docs/changelog/0.4.1.md
+++ b/docs/changelog/0.4.1.md
@@ -82,7 +82,7 @@ def isDirectory(path: CString): Boolean = {
     val flag = FILE_ATTRIBUTE_DIRECTORY
     GetFileAttributesA(path) & FILE_ATTRIBUTE_DIRECTORY != 0 
   } else {
-    val buf = alloc[stat.stat]
+    val buf = alloc[stat.stat]()
     stat.stat(path, buf)
     stat.S_ISDIR(buf._13) != 0
   }
