Fix typos and update supported Scala versions list

--- a/docs/changelog/0.4.3-RC1.md
+++ b/docs/changelog/0.4.3-RC1.md
@@ -1,28 +1,28 @@
 
 
-# Release v0.4.3-RC1 (2022-01-04)
+# v0.4.3-RC1 (2022-01-04)
 
-We're happy to announce the release of Scala Native v0.4.3-RC1, which bring support for Scala 3. 
-The minimal version of Scala supported by Scala Native is 3.1.0, due to fatal blockers in Scala 3.0.x.
-This release does also contain performance-critical bug fixes when performing operations on Strings, 
+We're happy to announce the release of Scala Native v0.4.3-RC1, which brings support for Scala 3. 
+This release does also contain performance-critical bug fixes to performing operations on Strings, 
 leading to significant improvement of regexes throughput.
 
 Due to multiple internal changes and to ensure compatibility with libraries published using Scala 2.13, 
-we've decided that the 0.4.3 will be preceded by its release candidates. 
+we've decided that the 0.4.3 will be preceded by release candidates. 
 If no new bugs will be discovered until 17th January 2020 it would be promoted to a full release.
 
 ## Breaking changes
+The minimal version of Scala 3 supported by Scala Native is 3.1.0, due to fatal blockers in Scala 3.0.x.
 ### Changes to the main method resolving
 In the previous versions of Scala Native main entry point was always resolved based on the companion object defining the main method. 
-This behaviour however was created multiple issues in situations when an actual main method was derived. Because of that issue,
+This behaviour however lead to multiple issues in situations when an actual main method was introduced via inheritance. Because of that issue,
 build tools needed to always add `$` suffix to actual main class to make sure that entry method would be found. 
 With the 0.4.3 release, Scala Native does generate static method forwarders in the same way as it is done in JVM and Scala.js.
 Build tools should make sure to no longer add `$` to the discovered main class name.
 
 ### Source compatibity of `stackalloc[T]` and `alloc[T]` methods
-No-param methods `scalanative.unsafe.stackalloc[T]` and `scalanative.unsafe.alloc[T]` were removed from Scala 3 unsafe package. 
-In Scala 2 these methods have been recommended and it is recommended to use empty-param variants of these methods, eg. `scalanative.unsafe.stackalloc[T]()` instead. 
-This change was decided due to changes in how does Scala 3 interpret source code which can lead to dangerous, hard to debug runtime errors. 
+No-param methods `scalanative.unsafe.stackalloc[T]` and `scalanative.unsafe.alloc[T]` were removed from Scala 3 `unsafe` package. 
+In Scala 2 these methods have been deprecated and it is recommended to use empty-param variants of these methods instead, eg. `scalanative.unsafe.stackalloc[T]()`.
+This change was introduced due to changes of how does Scala 3 interpret source code as it could lead to dangerous, hard to debug, runtime errors. 
 As an example call to `stackalloc[Byte](10)` in Scala 2 would result in allocating memory of size `10 * sizeof(Byte)`. In Scala 3 however,
 the given snippet would be interpreted as `stackalloc[Byte].apply(10)` which is still valid, but leads to allocating `1 * sizeof(Byte)` chunk of memory and 
 accessing its 10th element, which would lead to undefined behaviour. 
@@ -70,7 +70,7 @@ $ git shortlog -sn --no-merges v0.4.2..v0.4.3-RC1
 
 **Merged pull requests:**
 
-# Bug fixes
+### Bug fixes
 - Initialize _String with `_` `Array[Char]`
   [\#2449](https://github.com/scala-native/scala-native/pull/2449)
   ([lolgab](https://github.com/lolgab))
@@ -87,7 +87,7 @@ $ git shortlog -sn --no-merges v0.4.2..v0.4.3-RC1
   [\#2495](https://github.com/scala-native/scala-native/pull/2495)
   ([WojciechMazur](https://github.com/WojciechMazur))
 
-## Features
+### Features
 - System.properties define `os.arch`
   [\#2452](https://github.com/scala-native/scala-native/pull/2452)
   ([WojciechMazur](https://github.com/WojciechMazur))
@@ -102,7 +102,7 @@ $ git shortlog -sn --no-merges v0.4.2..v0.4.3-RC1
   ([WojciechMazur](https://github.com/WojciechMazur))
 
 
-## Native library
+### Native library
 - Adapt `unsafe` package for upcoming Scala 3 support
   [\#2454](https://github.com/scala-native/scala-native/pull/2454)
   ([WojciechMazur](https://github.com/WojciechMazur))
@@ -110,7 +110,7 @@ $ git shortlog -sn --no-merges v0.4.2..v0.4.3-RC1
   [\#2480](https://github.com/scala-native/scala-native/pull/2480)
   ([WojciechMazur](https://github.com/WojciechMazur))
 
-## Compiler plugin / NIR
+### Compiler plugin / NIR
 - Use encoded names for methods and fields in NIR
   [\#2458](https://github.com/scala-native/scala-native/pull/2458)
   ([WojciechMazur](https://github.com/WojciechMazur))
@@ -140,7 +140,7 @@ $ git shortlog -sn --no-merges v0.4.2..v0.4.3-RC1
   [\#2489](https://github.com/scala-native/scala-native/pull/2489)
   ([WojciechMazur](https://github.com/WojciechMazur))
 
-## Linker
+### Linker
 - Make reachablity phase more user friendly
   [\#2469](https://github.com/scala-native/scala-native/pull/2469)
   ([WojciechMazur](https://github.com/WojciechMazur))
