--- a/docs/changelog/0.4.3-RC1.md
+++ b/docs/changelog/0.4.3-RC1.md
@@ -30,7 +30,8 @@ More information can be found in [\#2480](https://github.com/scala-native/scala-
 
 ## Known issues
 ### Cannot create documentation using scaladoc in Scala Native sbt project
-When trying to generate documentation using Scaladoc for Scala Native project it would fail with an exception. This issue is common for most of the compiler plugins and was already fixed in Scala 3.1.1-RC2 compiler. As a workaround in Scala 3.1.0 we would recomend adjusting sbt build, by filtering out all `-Xplugin` settings from `Compile / doc / scalacOptions`.
+When trying to generate documentation using Scaladoc for projects using Scala Native compilation would fail with an exception. 
+This issue is common for most of the compiler plugins and was already fixed in Scala 3.1.1-RC2 compiler. As a workaround in Scala 3.1.0 we would recomend adjusting sbt build, by filtering out all `-Xplugin` settings from `Compile / doc / scalacOptions`.
 
 <table>
 <tbody>
