--- a/docs/changelog/0.4.4.md
+++ b/docs/changelog/0.4.4.md
@@ -32,7 +32,7 @@ More information about this new feature can be found [here](https://scala-native
 
 
 ### New sbt plugin - ScalaNativeJUnitPlugin 
-In this release we have added a new sbt plugin dedicated for easier setup of JUnit tests framework. `ScalaNatvieJUnitPlugin` is a port of similiar feature from Scala.js - it allows you to forget about specifing dedicated library dependencies for tests runtime. It does also ensure that JUnit plugin would no longer be included in dependencies of downstream libraries.
+In this release we have added a new sbt plugin dedicated for easier setup of JUnit tests framework. `ScalaNativeJUnitPlugin` is a port of similar feature from Scala.js - it allows you to forget about specifying dedicated library dependencies for tests runtime. It does also ensure that JUnit plugin would no longer be included in dependencies of downstream libraries.
 
 When migrating to newer version of Scala Native you enable both Scala Native support and setup JUnit runtime with the current version using only one setting in your project `enablePlugins(ScalaNativeJUnitPlugin)`. Remember to remove the old settings needed for JUnit support:
 ```
