--- a/docs/changelog/0.4.5.md
+++ b/docs/changelog/0.4.5.md
@@ -1,7 +1,7 @@
 
-# Release v0.4.5 (2022-06-27)
+# 0.4.5 (2022-06-27)
 
-We're happy to announce the patch release of Scala Native v0.4.5, which targets bugfixes and 
+We're happy to announce the patch release of Scala Native 0.4.5, which targets bugfixes and 
 implementation of selected Java standard library classes and does not include any new features.
 This release also adds initial support for compilation using Java 17.
 
@@ -75,7 +75,7 @@ $ git shortlog -sn --no-merges v0.4.4..v0.4.5
 
 **Merged pull requests:**
 
-# Java standard library
+## Java standard library
 
 - Add a timeout to InetAddress host caching, fix #2310
   [\#2580](https://github.com/scala-native/scala-native/pull/2580)
@@ -118,7 +118,7 @@ $ git shortlog -sn --no-merges v0.4.4..v0.4.5
   ([LeeTibbert](https://github.com/LeeTibbert))
 
 
-# C/POSIX standard library bindings
+## C/POSIX standard library bindings
 
 - add tgmath for real #104
   [\#2587](https://github.com/scala-native/scala-native/pull/2587)
@@ -145,7 +145,7 @@ $ git shortlog -sn --no-merges v0.4.4..v0.4.5
   [\#2669](https://github.com/scala-native/scala-native/pull/2669)
   ([LeeTibbert](https://github.com/LeeTibbert))
 
-# Scala Native runtime library
+## Scala Native runtime library
 - Fix #2635: implement nativelib Platform.scala#isFreeBSD
   [\#2636](https://github.com/scala-native/scala-native/pull/2636)
   ([LeeTibbert](https://github.com/LeeTibbert))
