--- a/docs/changelog/0.4.5.md
+++ b/docs/changelog/0.4.5.md
@@ -36,11 +36,11 @@ Scala standard library used by this release is based on the following versions:
 <tbody>
   <tr>
     <td>Commits since last release</td>
-    <td align="center">50</td>
+    <td align="center">51</td>
   </tr>
   <tr>
     <td>Merged PRs</td>
-    <td align="center">49</td>
+    <td align="center">50</td>
   </tr>
     <tr>
     <td>Contributors</td>
@@ -55,7 +55,7 @@ Big thanks to everybody who contributed to this release or reported an issue!
 
 ```
 $ git shortlog -sn --no-merges v0.4.4..v0.4.5
-    22	LeeTibbert
+    23	LeeTibbert
     10	Wojciech Mazur
      6	Arman Bilge
      4	110416
@@ -143,6 +143,9 @@ $ git shortlog -sn --no-merges v0.4.4..v0.4.5
   ([LeeTibbert](https://github.com/LeeTibbert))
 - Fix #2395: posixlib usleep method is now deprecated
   [\#2669](https://github.com/scala-native/scala-native/pull/2669)
+  ([LeeTibbert](https://github.com/LeeTibbert))
+- Fix #2657: Synthesize posix timezone and daylight variables on FreeBSD
+  [\#2695](https://github.com/scala-native/scala-native/pull/2695)
   ([LeeTibbert](https://github.com/LeeTibbert))
 
 ## Scala Native runtime library
