Fix typos [skip ci]

--- a/docs/changelog/0.4.5.md
+++ b/docs/changelog/0.4.5.md
@@ -1,8 +1,8 @@
 
 # 0.4.5 (2022-06-27)
 
-We're happy to announce the patch release of Scala Native 0.4.5, which targets bugfixes and 
-implementation of selected Java standard library classes and does not include any new features.
+We're happy to announce the release of Scala Native 0.4.5. 
+This patch release targets bugfixes and implements some of the missing Java standard library classes, but does not include any new features.
 This release also adds initial support for compilation using Java 17.
 
 Scala standard library used by this release is based on the following versions:
@@ -76,7 +76,6 @@ $ git shortlog -sn --no-merges v0.4.4..v0.4.5
 **Merged pull requests:**
 
 ## Java standard library
-
 - Add a timeout to InetAddress host caching, fix #2310
   [\#2580](https://github.com/scala-native/scala-native/pull/2580)
   ([TheElectronWill](https://github.com/TheElectronWill))
@@ -119,7 +118,6 @@ $ git shortlog -sn --no-merges v0.4.4..v0.4.5
 
 
 ## C/POSIX standard library bindings
-
 - add tgmath for real #104
   [\#2587](https://github.com/scala-native/scala-native/pull/2587)
   ([i10416](https://github.com/i10416))
