--- a/docs/changelog/0.5.0-SNAPSHOT.md
+++ b/docs/changelog/0.5.0-SNAPSHOT.md
@@ -9,7 +9,7 @@ We're happy to announce the release of Scala Native 0.5.0-SNAPSHOT.
 ## TL;DR
 * **Not backward compatible with previous releases**,
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis suscipit 
+Dolorem ipsum dolor sit amet, consectetur adipiscing elit. Duis suscipit 
 iaculis odio, in porta nibh ornare id. Ut in sodales diam. Sed lacinia eget
 metus sed ullamcorper. Suspendisse potenti. Donec imperdiet sem ac sapien
 ultricies hendrerit. Vestibulum magna lacus, tristique quis nulla a,
