Link document, add SNAPSHOT and WIP

--- a/docs/changelog/0.5.0.md
+++ b/docs/changelog/0.5.0.md
@@ -1,5 +1,7 @@
 
-# 0.5.0 (mmm dd, 2022)
+# 0.5.0-SNAPSHOT (mmm dd, 2022)
+
+**WIP**
 
 We are happy to announce the release of Scala Native 0.5.0!
 
