Document new and removed deprecated items in 0.5.0 Changelog, tranche 1

--- a/docs/changelog/0.5.0.md
+++ b/docs/changelog/0.5.0.md
@@ -90,6 +90,20 @@ Javadoc and JVM output:
     throw new IllegalArgumentException("URI is not absolute")
   }
 ```
+## Deprecated definitions 
+
+### Removed in this version
+
+* ScalaNativePlugin.scala 'val AutoImport' (deprecated in 0.3.7)
+
+### Introduced in this version
+* All newly deprecated declarations are subject to removal in the future.
+
+* posixlib unistd.scala 'sethostname()' is now deprecated because it
+  is not part of the POSIX 2018 standard.
+
+* posixlib unistd.scala 'vfork()' is now deprecated because it was removed
+  in the POSIX.1-2018 standard.
 
 ### Other breaking changes:
 * xxxx
@@ -141,3 +155,4 @@ $ git shortlog -sn --no-merges v0.4.x..v0.5.0
 #### Java standard library
 
   
+
