Remove logic from outside build - 0.5.0 only (#2605)
* Remove logic from build
* Find additional sites to avoid auto-application error
* Add Mima rule for new methods
* Add Mima rule to hide internal Impl changes, relax fatal warnings on tools
* Move basename to NativeConfig, use artifactPath from Config rather than pass around
* Move creating the workdir to the build
* Remove -out from executable name
* Update docs to match impl
* Add release notes

--- a/docs/changelog/0.5.0.md
+++ b/docs/changelog/0.5.0.md
@@ -1,5 +1,5 @@
 
-# 0.5.0-SNAPSHOT (mmm dd, 2022)
+# 0.5.0-SNAPSHOT (2022-mm-dd)
 
 **WIP**
 
@@ -16,6 +16,7 @@ Check out the documentation at
 ## TL;DR
 * **Not backward compatible with previous releases**,
 * Removed `java.net.URL` and `java.net.URI.toURL` related stubs we don't plan to implement.
+* Various changes to the build system. See "Build Integrator features" below.
 
 ## Breaking changes
 ### Broken backward compatibility
@@ -28,6 +29,7 @@ client so we don't plan to add the `URL` code to Scala Native.
 
 Third-party libraries may add the removed code listed here into their projects
 if they need it for linking.
+
 ```scala
 package java.net
 
@@ -82,6 +84,7 @@ class URLConnection {
 If we needed to support a third party library for URL we could follow our normal
 extension method to add the following implementation in `java.net.URI` based on
 Javadoc and JVM output:
+
 ```scala
   @scalanative.annotation.stub
   def toURL(): java.net.URL = if (this.isAbsolute()) {
@@ -105,10 +108,49 @@ Javadoc and JVM output:
 * posixlib unistd.scala 'vfork()' is now deprecated because it was removed
   in the POSIX.1-2018 standard.
 
+### Build integrator features
+
+There are a few features to be used by build tool integrators that have
+changed.
+
+- `config.artifactPath` The final artifact is now calculated for the integrator. No need to worry about the extension for Windows.
+- Now the `basename` needs to be set if it is not set by the developer
+- `config.withTestConfig(true)` for tests to allow a `-test` to be inserted as before. The default is `false` for normal projects.
+- `config.withBasedir(crossTarget)` is a Path that needs to be set rather than `workdir`.
+- `config.workdir` is now calculated from `basedir` but is available for integrators as needed.
+
+```scala
+val nativeConfig = build.NativeConfig.empty
+  .withBasename(moduleName) // projectName
+
+val config = build.Config.empty
+  .withLogger(logger)
+  .withMainClass(mainClass)
+  .withClassPath(classpath)
+  .withBasedir(crossTarget) // Path
+  .withTestConfig(testConfig)
+  .withCompilerConfig(nativeConfig)
+```
+
 ### Other breaking changes:
 * xxxx
 
 ## New features
+
+### User build settings
+
+You can now specify the `basename` of your executable. Typically it will
+default to the project name.
+
+```scala
+lazy val myproj = project
+  .in(file("."))
+  .settings(
+    nativeConfig ~= { c =>
+      c.withBasename("myapp")
+    }
+  )
+```
 
 ### Supported Scala versions
 We added ...
