Update 0.5.0 changelog with deprecation removals from PR #2988

--- a/docs/changelog/0.5.0.md
+++ b/docs/changelog/0.5.0.md
@@ -99,6 +99,10 @@ Javadoc and JVM output:
 
 * ScalaNativePlugin.scala 'val AutoImport' (deprecated in 0.3.7)
 
+* scala.scalanative.libc.signal.kill(pid, sig) (deprecated in 0.4.1)
+
+* scala.scalanative.libc.signal.SIGUSR1 (deprecated in 0.4.1)
+
 ### Introduced in this version
 * All newly deprecated declarations are subject to removal in the future.
 
