Partial fix #2765: Remove long deprecated alloc/stackalloc signed argument methods.

--- a/docs/changelog/0.5.0.md
+++ b/docs/changelog/0.5.0.md
@@ -97,12 +97,21 @@ Javadoc and JVM output:
 
 ### Removed in this version
 
-* ScalaNativePlugin.scala 'val AutoImport' (deprecated in 0.3.7)
+Ordered by version of Scala Native in which a deprecation was introduced.
 
-* scala.scalanative.libc.signal.kill(pid, sig) (deprecated in 0.4.1)
+* ScalaNativePlugin.scala 'val AutoImport' (deprecated in 0.3.7).
+
+* scala.scalanative.unsafe.alloc with signed type (deprecated in 0.4.0).
+  Suggested replacement: unsafe.alloc with unsigned type
+
+* scala.scalanative.unsafe.stackalloc with signed type (deprecated in 0.4.0).
+  <br>
+  Suggested replacement: unsafe.stackalloc with unsigned type
+
+* scala.scalanative.libc.signal.kill(pid, sig) (deprecated in 0.4.1).
   Suggested replacement: kill(pid, sig) from POSIX signal.
 
-* scala.scalanative.libc.signal.SIGUSR1 (deprecated in 0.4.1)
+* scala.scalanative.libc.signal.SIGUSR1 (deprecated in 0.4.1).
   Suggested replacement: SIGUSR1 from POSIX signal.
 
 ### Introduced in this version
