Fix #2291, #2764: Document long standing fact that unsafe.stackalloc[T] zeros memory

--- a/docs/changelog/0.5.0.md
+++ b/docs/changelog/0.5.0.md
@@ -162,7 +162,9 @@ lazy val myproj = project
 We added ...
 
 ## Bugfixes
-* xxx
+
+* Document the long standing fact that ``unsafe.stackalloc[T]``
+  zeros the allocated memory.
 
 ## Contributors
 
