Partial fix #2765: Another tranche of stale deprecation removals

--- a/docs/changelog/0.5.0.md
+++ b/docs/changelog/0.5.0.md
@@ -1,4 +1,3 @@
-
 # 0.5.0-SNAPSHOT (2022-mm-dd)
 
 **WIP**
@@ -57,7 +56,7 @@ package java.net
 import scalanative.annotation.stub
 
 class URLClassLoader(args: Array[Object], parent: ClassLoader)
-    extends ClassLoader(parent) {
+	extends ClassLoader(parent) {
   @stub
   def getURLs(): Array[Object] = ???
   @stub
@@ -88,12 +87,12 @@ Javadoc and JVM output:
 ```scala
   @scalanative.annotation.stub
   def toURL(): java.net.URL = if (this.isAbsolute()) {
-    new URL(this.toString)
+	new URL(this.toString)
   } else {
-    throw new IllegalArgumentException("URI is not absolute")
+	throw new IllegalArgumentException("URI is not absolute")
   }
 ```
-## Deprecated definitions 
+## Deprecated definitions
 
 ### Removed in this version
 
@@ -161,9 +160,9 @@ default to the project name.
 lazy val myproj = project
   .in(file("."))
   .settings(
-    nativeConfig ~= { c =>
-      c.withBasename("myapp")
-    }
+	nativeConfig ~= { c =>
+	  c.withBasename("myapp")
+	}
   )
 ```
 
@@ -187,16 +186,16 @@ $ git shortlog -sn --no-merges v0.4.x..v0.5.0
 <table>
 <tbody>
   <tr>
-    <td>Merged PRs</td>
-    <td align="center"></td>
+	<td>Merged PRs</td>
+	<td align="center"></td>
   </tr>
   <tr>
-    <td>Closed issues</td>
-    <td align="center"></td>
+	<td>Closed issues</td>
+	<td align="center"></td>
   </tr>
-    <tr>
-    <td>Contributors</td>
-    <td align="center"></td>
+	<tr>
+	<td>Contributors</td>
+	<td align="center"></td>
   </tr>
   <tr>
 </tbody>
@@ -213,5 +212,38 @@ $ git shortlog -sn --no-merges v0.4.x..v0.5.0
 
 #### Java standard library
 
-  
+## Deprecated definitions waiting for lock on this file.
+
+**Move to "Deprecated definitions" section above after PR #3003 has been
+merged or declined.**
+
+### Removed in this version
+
+#### Deprecated in 0.4.0
+
+* org.junit.Assert.assertEquals(expected: Double, actual: Double)
+
+* org.junit.Assert.assertEquals(message: String, expected: Double,
+	actual: Double)
+
+* org.scalajs.testinterface.TestUtils
+
+
+#### Deprecated in 0.4.1
+
+* scala.scalanative.runtime.GC.alloc(rawty: RawPtr, size: CSize)
+
+* scala.scalanative.runtime.GC.alloc_atomic(rawty: RawPtr, size: CSize)
+
+* scala.scalanative.runtime.Platform.windowsGetUserCountry()
+
+* scala.scalanative.runtime.Platform.windowsGetUserLang()
+
+* scala.scalanative.runtime.package.toClass(rtti: RawPtr)
+
+* scala.scalanative.runtime.package.toRawType(cls: Class[_])
+
+* scala.scalanative.runtime.package.getRawType(obj: Object)
+
+
 
