Partial fix #2765: Another tranche of stale deprecation removals (#3024)
* Partial fix #2765: Another tranche of stale deprecation removals

* Merge this doc into PR #3003 mainline changes

--- a/docs/changelog/0.5.0.md
+++ b/docs/changelog/0.5.0.md
@@ -1,5 +1,5 @@
 
-# 0.5.0-SNAPSHOT (2022-mm-dd)
+# 0.5.0-SNAPSHOT (2023-mm-dd)
 
 **WIP**
 
@@ -97,25 +97,52 @@ Javadoc and JVM output:
 
 ### Removed in this version
 
+
 Ordered by version of Scala Native in which a deprecation was introduced.
 
-* ScalaNativePlugin.scala 'val AutoImport' (deprecated in 0.3.7).
+* Deprecated in 0.3.7
 
-* scala.scalanative.unsafe.alloc with signed type (deprecated in 0.4.0).
-  Suggested replacement: unsafe.alloc with unsigned type
+  * ScalaNativePlugin.scala 'val AutoImport'.<BR>
 
-* scala.scalanative.unsafe.stackalloc with signed type (deprecated in 0.4.0).
-  <br>
-  Suggested replacement: unsafe.stackalloc with unsigned type
+* Deprecated in 0.4.0
 
-* scala.scalanative.libc.signal.kill(pid, sig) (deprecated in 0.4.1).
-  Suggested replacement: kill(pid, sig) from POSIX signal.
+  * scala.scalanative.unsafe.alloc with signed type.<BR>
+    Suggested replacement: unsafe.alloc with unsigned type.
 
-* scala.scalanative.libc.signal.SIGUSR1 (deprecated in 0.4.1).
-  Suggested replacement: SIGUSR1 from POSIX signal.
+  * scala.scalanative.unsafe.stackalloc with signed type.<BR>
+    Suggested replacement: unsafe.stackalloc with unsigned type.
+
+* Deprecated in 0.4.1
+
+  * scala.scalanative.libc.signal.kill(pid, sig).<BR>
+    Suggested replacement: kill(pid, sig) from POSIX signal.
+
+  * scala.scalanative.libc.signal.SIGUSR1.<BR>
+    Suggested replacement: SIGUSR1 from POSIX signal.
+
+  * scala.scalanative.runtime.GC.alloc(rawty: RawPtr, size: CSize)<BR>
+	Suggested replacement: none, Scala Native internal use only.
+
+  * scala.scalanative.runtime.GC.alloc_atomic(rawty: RawPtr, size: CSize)<BR>
+	Suggested replacement: none, Scala Native internal use only.
+
+  * scala.scalanative.runtime.Platform.windowsGetUserCountry()<BR>
+	Suggested replacement: Use windows.WinNlsApi to retrieve country
+
+  * scala.scalanative.runtime.Platform.windowsGetUserLang()<BR>
+	Suggested replacement: Use windows.WinNlsApi to retrieve locale
+
+  * scala.scalanative.runtime.package.toClass(rtti: RawPtr)<BR>
+	Suggested replacement: none, Scala Native internal use only.
+
+  * scala.scalanative.runtime.package.toRawType(cls: Class[_])<BR>
+	Suggested replacement: none, Scala Native internal use only.
+
+  * scala.scalanative.runtime.package.getRawType(obj: Object)<BR>
+	Suggested replacement: none, Scala Native internal use only.
 
 ### Introduced in this version
-* All newly deprecated declarations are subject to removal in the future.
+All newly deprecated declarations are subject to removal in the future.
 
 * posixlib unistd.scala 'sethostname()' is now deprecated because it
   is not part of the POSIX 2018 standard.
